--- a/src/Component/Videocard.css
+++ b/src/Component/Videocard.css
@@ -74,3 +74,21 @@ p:first-child {
   border-right: 2px solid gray;
   padding-right: 10px;
 }
+.search-box {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-right: 120px;
+  padding-right: 10px;
+  height: 50px;
+}
+.search-box input {
+  width: 350px;
+  height: 50px;
+  border-radius: 25px;
+  align-items: center;
+  font-size: 15px;
+  text-align: start;
+  padding-left: 25px;
+}
